# flow-runner

./: .env.example  .gitignore  CLAUDE.md  FINDINGS.md  README.md  pyproject.toml
.claude/skills/flow/: SKILL.md
.claude/skills/flow-review/: SKILL.md
.claude/skills/ui-builder/: SKILL.md
.flows/: agent-receive-work-auto.yaml  agent-receive-work-codex.yaml  agent-receive-work-gemini.yaml  agent-receive-work.yaml  code-change.yaml  demo-prompt.yaml  eval-routing.yaml  plan-change.yaml
flow_runner/: __init__.py  cli.py  db.py  models.py  prompt_cli.py  runner.py  steps.py
schema/: 018_flows.surql  019_action_registry.surql
scripts/: setup.sh  start-db.sh  stop-db.sh
seed/: seed_action_registry.surql  seed_flow_components.surql
tools/flow-builder/: Cargo.toml
tools/flow-builder/src/: actions.rs  app.rs  main.rs  model.rs
